# jupyfmt

./: README.md  pyproject.toml
src/: jupyfmt.py
